[Theme][Default] Fix vertical btn alignment

--- a/themes/default/css/sass/bootstrap/_button.scss
+++ b/themes/default/css/sass/bootstrap/_button.scss
@@ -7,3 +7,11 @@
 		padding: .15rem .25rem;
 	}
 }
+
+.btn-group-vertical {
+	.btn {
+		+ .btn {
+			margin-left: 0;
+		}
+	}
+}
